deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coolkit
  namespace: default
  labels:
    app: coolkit
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32731
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: coolkit
  sessionAffinity: None
  type: NodePort
