deployment/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: coolkit-service
  namespace: coolkit
  labels:
    app: coolkit
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: coolkit
---
apiVersion: v1
kind: Service
metadata:
  name: coolkit-metrics
  namespace: coolkit
  labels:
    app: coolkit
spec:
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 2345
  selector:
    app: coolkit
