deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coolkit
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: coolkit.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coolkit
                port:
                  number: 8080
